--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,7 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
       - name: Create new repository via GitHub API
         run: |
-          curl -i -X POST \
+          curl -X POST \
             -H "Accept: application/vnd.github+json" \ 
             -H "Authorization: token ${{ github.token }}" \
             -d '{ \
@@ -45,10 +45,11 @@ jobs:
                 "private": true \
               }' \
             https://api.github.com/user/repos
-          sleep 10
       - name: Push repository on mirror mode
         working-directory: ./${{ env.REPOSITORY_NAME }}
-        run: git push --mirror "https://$OWNER_NAME:$GITHUB_TOKEN@github.com/$ALT_NAME"
+        run: |
+          sleep 10
+          git push --mirror "https://$OWNER_NAME:$GITHUB_TOKEN@github.com/$ALT_NAME"
         env:
           OWNER_NAME: ${{ github.repository_owner }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
