--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           curl -X POST \
             -H "Accept: application/vnd.github+json" \ 
-            -H "Authorization: token ${{ github.token }}" \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -d '{
                 "name": "${{ env.REPOSITORY_NAME }}-${{ github.repository_owner }}",
                 "private": true
