--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,9 +3,6 @@ name: Create private repository for personal SATwi
 on:
   # Manual execution only
   workflow_dispatch:
-  
-env:
-  PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
 jobs:
   check-visibility:
@@ -41,6 +38,7 @@ jobs:
 
       - name: Create new repository via GitHub API
         run: |
+          echo ${#PERSONAL_ACCESS_TOKEN}
           curl -X POST https://api.github.com/user/repos \
             -H "Accept: application/vnd.github+json" \ 
             -H "Authorization: token $PERSONAL_ACCESS_TOKEN" \
@@ -48,6 +46,9 @@ jobs:
               "name": "${{ env.REPOSITORY_NAME }}-${{ github.repository_owner }}",
               "private": true
               }'
+        env:
+          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+
         
       - name: Push repository on mirror mode
         working-directory: ./${{ env.REPOSITORY_NAME }}
