--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,13 +39,7 @@ jobs:
       - name: Create new repository via GitHub API
         run: |
           echo ${#PERSONAL_ACCESS_TOKEN}
-          curl -X POST https://api.github.com/user/repos \
-            -H "Accept: application/vnd.github+json" \ 
-            -H "Authorization: token $PERSONAL_ACCESS_TOKEN" \
-            -d '{
-              "name": "${{ env.REPOSITORY_NAME }}-${{ github.repository_owner }}",
-              "private": true
-              }'
+          curl -X POST -H "Accept: application/vnd.github+json" -H "Authorization: token $PERSONAL_ACCESS_TOKEN" -d '{"name": "${{ env.REPOSITORY_NAME }}-${{ github.repository_owner }}", "private": true}' https://api.github.com/user/repos
         env:
           PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
