--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           pwd
           ls -la
-          cd ${{ env.REPOSITORY_NAME }}
+          cd ${{ env.REPOSITORY_NAME }}.git
           sleep 10
           git push --mirror "https://$OWNER_NAME:$GITHUB_TOKEN@github.com/$ALT_NAME"
         env:
